# config-graph

./: .gitignore  .pre-commit-config.yaml  README.md  Readme.md  pyproject.toml  shell.nix  tox.ini
.github/ISSUE_TEMPLATE/: task.md
.github/workflows/: ci.yml
debugging/: cli.py
docs/: Edges.md  Nodes-and-Edges.md  Nodes.md
precice_config_graph/: cli.py  edges.py  enums.py  graph.py  helper.py  nodes.py  xml_processing.py
precice_config_graph/graph/: builder.py  operations.py  visualizer.py
preciceconfiggraph/: Nodes.py  edges.py  graph.py  lib.py  nodes.py  xml_processing.py
test/example-configs/actions/: precice-config.xml
test/example-configs/exports/: precice-config.xml
test/example-configs/multi-coupling/: precice-config.xml
test/example-configs/simple-data-never-read/: precice-config.xml
test/example-configs/simple-good/: precice-config.xml  simple-good_test.py
test/example-configs/simple-unused-data/: precice-config.xml
test/example-configs/watch-point/: precice-config.xml
tests/create-config/: create-config.xml  create_config_test.py
tests/example-configs/actions/: actions_test.py  precice-config.xml  test.py
tests/example-configs/api-access/: precice-config.xml
tests/example-configs/direct-access/: precice-config.xml
tests/example-configs/multi-coupling/: multi-coupling_test.py  precice-config.xml
tests/example-configs/simple-data-never-read/: precice-config.xml
tests/example-configs/simple-good/: precice-config.xml  (+1 more)
tests/graph-equivalence/: graph_equivalence_test.py
tests/smoke-tests/: smoke_test.py  test.py
(+6 files in other folders)
